<resources>
    <string name="app_name">VideoClub Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Hello blank fragment</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Requesitados">Requested</string>
    <string name="filmes">Movies</string>
    <string name="clientes">Customers</string>
    <string name="Name">Name</string>
    <string name="Num">Number</string>
    <string name="register">Register</string>
    <string name="Name_Filmes">Movie Title</string>
    <string name="Ano_Filme">Movie Year</string>
    <string name="Filme_Duração">Movie Time</string>
    <string name="nome_obrigatorio">Nome Obrigatorio</string>
    <string name="numero_obrigatorio">Numero Obrigatorio</string>
    <string name="cliente_guardado_sucesso">Client Saved</string>
    <string name="erro_guardar_cliente">Client not Saved</string>
</resources>